[gd_scene load_steps=11 format=2]

[ext_resource path="res://Eklentiler/Car/png/separate/truck/Wheel (1).png" type="Texture" id=1]
[ext_resource path="res://Eklentiler/Car/png/separate/truck/Body.png" type="Texture" id=2]
[ext_resource path="res://Kodlar/Car.gd" type="Script" id=3]
[ext_resource path="res://Eklentiler/Car/png/separate/truck/Head.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
rough = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 315.021, 70.6509 )

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="CircleShape2D" id=4]
radius = 110.0

[sub_resource type="PhysicsMaterial" id=5]
rough = true

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 629.174, 394.759 )

[node name="Car" type="RigidBody2D"]
collision_layer = 32768
collision_mask = 49153
mass = 500.0
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
script = ExtResource( 3 )

[node name="Main__Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Head" type="Sprite" parent="Main__Body"]
position = Vector2( -70.7272, -303.182 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.24492, -64 )
shape = SubResource( 2 )

[node name="wheel1" type="RigidBody2D" parent="."]
position = Vector2( 192, 192 )
collision_layer = 32768
collision_mask = 32769
mass = 50.0
physics_material_override = SubResource( 3 )
gravity_scale = 7.0
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="wheel1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel1"]
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="wheel1"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="wheel2" type="RigidBody2D" parent="."]
position = Vector2( -256, 192 )
collision_layer = 32768
collision_mask = 32769
mass = 50.0
physics_material_override = SubResource( 5 )
gravity_scale = 7.0
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="wheel2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wheel2"]
shape = SubResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="wheel2"]
node_a = NodePath("../..")
node_b = NodePath("..")
softness = 0.03

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )
smoothing_enabled = true

[node name="player_area" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
position = Vector2( -11.9865, -77.912 )
shape = SubResource( 6 )

[connection signal="body_entered" from="player_area" to="." method="_on_player_area_body_entered"]
